--- a/index.html
+++ b/index.html
@@ -62,22 +62,58 @@
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
                 <li><a class="dropdown-item text-danger" href="shop.html">Visi - Misi</a></li>
                 <li><a class="dropdown-item" href="categories.html">Sejarah</a></li>
-                <!-- <li><a class="dropdown-item" href="new-arrivals.html">New Arrivals</a></li> -->
-                <!-- <li><a class="dropdown-item" href="sale.html">Sale</a></li> -->
+                <li><a class="dropdown-item" href="new-arrivals.html">Struktur Organisasi</a></li>
               </ul>
             </li>
-            <li><a class="nav-link" href="about.html">About us</a></li>
-            <li><a class="nav-link" href="services.html">Services</a></li>
-            <li><a class="nav-link" href="blog.html">Blog</a></li>
-            <li><a class="nav-link" href="contact.html">Contact us</a></li>
-          </ul>
-
-          <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li>
-              <a class="nav-link" href="#"><img src="images/user.svg" /></a>
+            <li><a class="nav-link" href="about.html">PPDB</a></li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="shopDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Informasi
+              </a>
+              <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
+                <li><a class="dropdown-item text-danger" href="shop.html">Pengumuman Sekolah</a></li>
+                <li><a class="dropdown-item" href="categories.html">Materi Sekolah<a></li>
+                <li><a class="dropdown-item" href="new-arrivals.html">Kontak</a></li>
+              </ul>
             </li>
-            <li>
-              <a class="nav-link" href="cart.html"><img src="images/cart.svg" /></a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="shopDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Fasilitas
+              </a>
+              <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
+                <li><a class="dropdown-item text-danger" href="shop.html">Ekstrakurikuler</a></li>
+                <li><a class="dropdown-item" href="categories.html">Sarpras<a></li>
+                <li><a class="dropdown-item" href="new-arrivals.html">Kurikulum</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="shopDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Prestasi
+              </a>
+              <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
+                <li><a class="dropdown-item text-danger" href="shop.html">Kejuaraan</a></li>
+              </ul>
             </li>
           </ul>
         </div>
