menambahkan logo navbar

--- a/index.html
+++ b/index.html
@@ -25,100 +25,102 @@
   <body>
     <!-- Start Header/Navigation -->
     <nav
-      class="custom-navbar navbar navbar fixed-top-transparent navigation-3 clearfix fixed-top transparent navbar-expand-md navbar-dark bg-dark"
-      arial-label="Furni navigation bar"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Grafitasi<span>.</span></a>
+    class="custom-navbar navbar navbar fixed-top-transparent navigation-3 clearfix fixed-top transparent navbar-expand-md navbar-dark bg-dark"
+    arial-label="Furni navigation bar"
+  >
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" alt="Grafitasi Logo" style="height: 60px;">
+      </a>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarsFurni"
-          aria-controls="navbarsFurni"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarsFurni"
+        aria-controls="navbarsFurni"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarsFurni">
-          <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="shopDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Profil
-              </a>
-              <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li><a class="dropdown-item text-danger" href="shop.html">Visi - Misi</a></li>
-                <li><a class="dropdown-item" href="categories.html">Sejarah</a></li>
-                <li><a class="dropdown-item" href="new-arrivals.html">Struktur Organisasi</a></li>
-              </ul>
-            </li>
-            <li><a class="nav-link" href="about.html">PPDB</a></li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="shopDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Informasi
-              </a>
-              <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li><a class="dropdown-item text-danger" href="shop.html">Pengumuman Sekolah</a></li>
-                <li><a class="dropdown-item" href="categories.html">Materi Sekolah<a></li>
-                <li><a class="dropdown-item" href="new-arrivals.html">Kontak</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="shopDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Fasilitas
-              </a>
-              <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li><a class="dropdown-item text-danger" href="shop.html">Ekstrakurikuler</a></li>
-                <li><a class="dropdown-item" href="categories.html">Sarpras<a></li>
-                <li><a class="dropdown-item" href="new-arrivals.html">Kurikulum</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="shopDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Prestasi
-              </a>
-              <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li><a class="dropdown-item text-danger" href="shop.html">Kejuaraan</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarsFurni">
+        <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="shopDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Profil
+            </a>
+            <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
+              <li><a class="dropdown-item text-danger" href="shop.html">Visi - Misi</a></li>
+              <li><a class="dropdown-item" href="categories.html">Sejarah</a></li>
+              <li><a class="dropdown-item" href="new-arrivals.html">Struktur Organisasi</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link" href="about.html">PPDB</a></li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="shopDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Informasi
+            </a>
+            <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
+              <li><a class="dropdown-item text-danger" href="shop.html">Pengumuman Sekolah</a></li>
+              <li><a class="dropdown-item" href="categories.html">Materi Sekolah<a></li>
+              <li><a class="dropdown-item" href="new-arrivals.html">Kontak</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="shopDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Fasilitas
+            </a>
+            <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
+              <li><a class="dropdown-item text-danger" href="shop.html">Ekstrakurikuler</a></li>
+              <li><a class="dropdown-item" href="categories.html">Sarpras<a></li>
+              <li><a class="dropdown-item" href="new-arrivals.html">Kurikulum</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="shopDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Prestasi
+            </a>
+            <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
+              <li><a class="dropdown-item text-danger" href="shop.html">Kejuaraan</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
     <!-- End Header/Navigation
 
