menambahkan visi misi

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
               Profil
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-              <li><a class="dropdown-item text-danger" href="shop.html">Visi - Misi</a></li>
-              <li><a class="dropdown-item" href="categories.html">Sejarah</a></li>
-              <li><a class="dropdown-item" href="new-arrivals.html">Struktur Organisasi</a></li>
+              <li><a class="dropdown-item text-danger" href="visimisi.html">Visi - Misi</a></li>
+              <li><a class="dropdown-item" href="sejarah.html">Sejarah</a></li>
+              <li><a class="dropdown-item" href="struturOrganisasi.html">Struktur Organisasi</a></li>
             </ul>
           </li>
           <li><a class="nav-link" href="about.html">PPDB</a></li>
