--- a/pengumuman.html
+++ b/pengumuman.html
@@ -68,7 +68,7 @@
             </ul>
           </li>
           
-          <li><a class="nav-link" href="about.html">PPDB</a></li>
+          <li><a class="nav-link" href="ppdb.html">PPDB</a></li>
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -81,9 +81,9 @@
               Informasi
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-              <li><a class="dropdown-item text-danger" href="shop.html">Pengumuman Sekolah</a></li>
-              <li><a class="dropdown-item" href="categories.html">Materi Sekolah<a></li>
-              <li><a class="dropdown-item" href="new-arrivals.html">Kontak</a></li>
+              <li><a class="dropdown-item text-danger" href="pengumuman.html">Pengumuman Sekolah</a></li>
+              <li><a class="dropdown-item" href="materi.html">Materi Sekolah<a></li>
+              <li><a class="dropdown-item" href="kontak.html">Kontak</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -98,12 +98,12 @@
               Fasilitas
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-              <li><a class="dropdown-item text-danger" href="shop.html">Ekstrakurikuler</a></li>
-              <li><a class="dropdown-item" href="categories.html">Perpustakaan<a></li>
-              <li><a class="dropdown-item" href="new-arrivals.html">Kurikulum</a></li>
+              <li><a class="dropdown-item text-danger" href="ekstrakurikuler.html">Ekstrakurikuler</a></li>
+              <li><a class="dropdown-item" href="perpustakaan.html">Perpustakaan<a></li>
+              <li><a class="dropdown-item" href="kurikulum.html">Kurikulum</a></li>
             </ul>
           </li>
-          <li><a class="nav-link" href="about.html">Prestasi</a></li>
+          <li><a class="nav-link" href="prestasi.html">Prestasi</a></li>
         </ul>
       </div>
     </div>
@@ -141,7 +141,7 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-lg-6">
-            <h2 class="section-title">Visi Misi Sekolah</h2>
+            <h2 class="section-title">INI PPDB</h2>
             <p>
               Terwujudnya siswa yang bertakwa, berkarakter, cerdas, terampil, dan berprestasi, serta berwawasan lingkungan
             </p>
