--- a/prestasi.html
+++ b/prestasi.html
@@ -141,7 +141,7 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-lg-6">
-            <h2 class="section-title">INI PPDB</h2>
+            <h2 class="section-title">PRESTASI</h2>
             <p>
               Terwujudnya siswa yang bertakwa, berkarakter, cerdas, terampil, dan berprestasi, serta berwawasan lingkungan
             </p>
