pull main from profile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <li><a class="dropdown-item" href="struturOrganisasi.html">Struktur Organisasi</a></li>
             </ul>
           </li>
-          <li><a class="nav-link" href="about.html">PPDB</a></li>
+          <li><a class="nav-link" href="ppdb.html">PPDB</a></li>
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -80,9 +80,9 @@
               Informasi
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-              <li><a class="dropdown-item text-danger" href="shop.html">Pengumuman Sekolah</a></li>
-              <li><a class="dropdown-item" href="categories.html">Materi Sekolah<a></li>
-              <li><a class="dropdown-item" href="new-arrivals.html">Kontak</a></li>
+              <li><a class="dropdown-item text-danger" href="pengumuman.html">Pengumuman Sekolah</a></li>
+              <li><a class="dropdown-item" href="materi.html">Materi Sekolah<a></li>
+              <li><a class="dropdown-item" href="kontak.html">Kontak</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -97,12 +97,12 @@
               Fasilitas
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-              <li><a class="dropdown-item text-danger" href="shop.html">Ekstrakurikuler</a></li>
-              <li><a class="dropdown-item" href="categories.html">Perpustakaan<a></li>
-              <li><a class="dropdown-item" href="new-arrivals.html">Kurikulum</a></li>
+              <li><a class="dropdown-item text-danger" href="ekstrakurikuler.html">Ekstrakurikuler</a></li>
+              <li><a class="dropdown-item" href="perpustakaan.html">Perpustakaan<a></li>
+              <li><a class="dropdown-item" href="kurikulum.html">Kurikulum</a></li>
             </ul>
           </li>
-          <li><a class="nav-link" href="about.html">Prestasi</a></li>
+          <li><a class="nav-link" href="prestasi.html">Prestasi</a></li>
         </ul>
       </div>
     </div>
