--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                   </p>
                 </div>
               </div>
-              <p><a herf="#" class="btn">More</a></p>
+              <p><a href="visimisi.html" class="btn">More</a></p>
             </div>
           </div>
 
