--- a/ekstrakurikuler.html
+++ b/ekstrakurikuler.html
@@ -54,7 +54,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="shopDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Fasilitas</a>
                         <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                            <li><a class="dropdown-item text-danger" href="ekstrakurikuler.html">Ekstrakurikuler</a></li>
+                            <li class="active"><a class="dropdown-item text-danger" href="ekstrakurikuler.html">Ekstrakurikuler</a></li>
                             <li><a class="dropdown-item" href="perpustakaan.html">Perpustakaan</a></li>
                             <li><a class="dropdown-item" href="kurikulum.html">Kurikulum</a></li>
                         </ul>
@@ -100,10 +100,10 @@
                   <div id="carouselPramuka" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-inner">
                           <div class="carousel-item active">
-                              <img src="images/beranda.JPG" class="d-block w-100 img-fluid height-fixed" alt="Pramuka 1">
+                              <img src="images/ekstra/pramuka1.jpg" class="d-block w-100 img-fluid height-fixed" alt="Pramuka 1">
                           </div>
                           <div class="carousel-item">
-                              <img src="images/guru.png" class="d-block w-100 img-fluid height-fixed" alt="Pramuka 2">
+                              <img src="images/ekstra/pramuka2.jpg" class="d-block w-100 img-fluid height-fixed" alt="Pramuka 2">
                           </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselPramuka" data-bs-slide="prev">
@@ -125,10 +125,10 @@
                   <div id="carouselSeniSuara" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-inner">
                           <div class="carousel-item active">
-                              <img src="images/beranda.JPG" class="d-block w-100 img-fluid height-fixed"  alt="Seni Suara dan Musik 1">
+                              <img src="images/ekstra/senimusik1.jpg" class="d-block w-100 img-fluid height-fixed"  alt="Seni Suara dan Musik 1">
                           </div>
                           <div class="carousel-item">
-                              <img src="images/guru.png" class="d-block w-100 img-fluid height-fixed"  alt="Seni Suara dan Musik 2">
+                              <img src="images/ekstra/senimusik2.jpg" class="d-block w-100 img-fluid height-fixed"  alt="Seni Suara dan Musik 2">
                           </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselSeniSuara" data-bs-slide="prev">
@@ -200,10 +200,10 @@
                   <div id="carouselFutsal" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-inner">
                           <div class="carousel-item active">
-                              <img src="images/beranda.JPG" class="d-block w-100 img-fluid height-fixed"  alt="Futsal 1">
+                              <img src="images/ekstra/futsal2.jpg" class="d-block w-100 img-fluid height-fixed"  alt="Futsal 1">
                           </div>
                           <div class="carousel-item">
-                              <img src="images/guru.png" class="d-block w-100 img-fluid height-fixed"  alt="Futsal 2">
+                              <img src="images/ekstra/futsal1.jpg" class="d-block w-100 img-fluid height-fixed"  alt="Futsal 2">
                           </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselFutsal" data-bs-slide="prev">
@@ -250,10 +250,10 @@
                   <div id="carouselKomputer" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-inner">
                           <div class="carousel-item active">
-                              <img src="images/beranda.JPG" class="d-block w-100 img-fluid height-fixed"  alt="Komputer 1">
+                              <img src="images/ekstra/komputer1.jpg" class="d-block w-100 img-fluid height-fixed"  alt="Komputer 1">
                           </div>
                           <div class="carousel-item">
-                              <img src="images/guru.png" class="d-block w-100 img-fluid height-fixed"  alt="Komputer 2">
+                              <img src="images/ekstra/komputer2.jpg" class="d-block w-100 img-fluid height-fixed"  alt="Komputer 2">
                           </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselKomputer" data-bs-slide="prev">
