--- a/kurikulum.html
+++ b/kurikulum.html
@@ -24,7 +24,7 @@
       .animation-placeholder {
         position: relative;
         overflow: hidden;
-        height: 400px; /* Sesuaikan tinggi dengan kebutuhan */
+        height: 400px; 
       }
       
       .animation-box {
@@ -33,8 +33,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #f0f0f0; /* Warna latar belakang sementara */
-        /* Tambahkan animasi atau efek CSS di sini */
+        background-color: #f0f0f0; 
       }
       
     </style>    
