membuat halaman pengembangan karakter dan merapikan navbar

--- a/kontak.html
+++ b/kontak.html
@@ -63,7 +63,7 @@
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
               <li class="active"><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
-              <li><a class="dropdown-item" href="sejarah.html">Sejarah</a></li>
+              <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
               <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li>
             </ul>
           </li>
