--- a/sejarah.html
+++ b/sejarah.html
@@ -18,7 +18,7 @@
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co
+      SDN 06 NGRINGO | Sejarah
     </title>    
   </head>
 
