--- a/ekstrakurikuler.html
+++ b/ekstrakurikuler.html
@@ -60,7 +60,7 @@
               >
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
                 <li><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
-                <li><a class="dropdown-item" href="sejarah.html">Sejarah</a></li>
+                <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
                 <li>
                   <a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a>
                 </li>
