--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co
+       SDN 06 NGRINGO
     </title>
   </head>
 
@@ -63,7 +63,7 @@
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
               <li><a class="dropdown-item text-danger" href="visimisi.html">Visi - Misi</a></li>
-              <li><a class="dropdown-item" href="sejarah.html">Pengembangan Karakter</a></li>
+              <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
               <li><a class="dropdown-item" href="struturOrganisasi.html">Struktur Organisasi</a></li>
             </ul>
           </li>
