--- a/kurikulum.html
+++ b/kurikulum.html
@@ -17,8 +17,7 @@
     />
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co
+    <title>SDN 06 NGRINGO | Kurikulum
     </title>
     <style>
       .animation-placeholder {
@@ -80,8 +79,8 @@
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
               <li class="active"><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
-              <li><a class="dropdown-item" href="sejarah.html">Sejarah</a></li>
-              <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li>
+              <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
+              <li><a class="dropdown-item" href="organisasi.html">Struktur Organisasi</a></li>
             </ul>
           </li>
           
