--- a/visimisi.html
+++ b/visimisi.html
@@ -18,7 +18,7 @@
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co
+      SDN 06 NGRINGO | Visi Misi
     </title>    
   </head>
 
@@ -63,7 +63,7 @@
             </a>
             <ul class="dropdown-menu bg-dark active" aria-labelledby="shopDropdown">
               <li class="active"><a class="dropdown-item text-danger" href="visimisi.html">Visi - Misi</a></li>
-              <li class=""><a class="dropdown-item" href="sejarah.html">Sejarah</a></li>
+              <li class=""><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
               <li><a class="dropdown-item" href="organisasi.html">Struktur Organisasi</a></li>
             </ul>
           </li>
