--- a/organisasi.html
+++ b/organisasi.html
@@ -81,8 +81,8 @@
               Informasi
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-              <li><a class="dropdown-item text-danger" href="shop.html">Pengumuman Sekolah</a></li>
-              <li><a class="dropdown-item" href="categories.html">Materi Sekolah<a></li>
+              <li><a class="dropdown-item text-danger" href="pengumuman.html">Pengumuman Sekolah</a></li>
+              <li><a class="dropdown-item" href="materi.html">Materi Sekolah<a></li>
              
             </ul>
           </li>
