--- a/organisasi.html
+++ b/organisasi.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Untree.co" />
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="images/logo.png" />
 
     <meta name="description" content="" />
     <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -108,7 +108,7 @@
       </div>
     </div>
   </nav>
-    <!-- End Header/Navigation
+    <!-- End Header/Navigation-->
 
     <!-- Start Why Choose Us Section -->
     <div class="why-choose-section">
@@ -131,7 +131,7 @@
       </div>
     </div>
     <!-- End Why Choose Us Section -->
-
+    <!-- Start footer-->
     <footer class="footer-section">
       <div class="container relative">
         <div class="row g-5 mb-5">
@@ -211,7 +211,7 @@
         </div>
       </div>
     </footer>
-    
+    <!-- End Footer Section -->
     <!-- Add FontAwesome for icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     
