--- a/prestasi.html
+++ b/prestasi.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Untree.co" />
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="images/logo.png" />
 
     <meta name="description" content="" />
     <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -119,7 +119,7 @@
     </div>
   </nav>
     <!-- End Header/Navigation-->
-
+    <!-- start prestasi -->
     <div class="why-choose-section mt-5">
       <div class="container">
         <h2 class="section-title text-center">PRESTASI</h2>
@@ -382,8 +382,7 @@
           </div>
       </div>
   </div>
-  
-    <!-- End Why Choose Us Section -->
+    <!-- End prestasi -->
 
     <!-- Start Footer Section -->
     <footer class="footer-section">
