--- a/visimisi.html
+++ b/visimisi.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Untree.co" />
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="images/logo.png"/>
 
     <meta name="description" content="" />
     <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -27,8 +27,8 @@
     <nav
     class="custom-navbar navbar navbar fixed-top-transparent navigation-3 clearfix fixed-top transparent navbar-expand-md navbar-dark bg-dark"
     arial-label="Furni navigation bar"
-  >
-    <div class="container">
+    >
+      <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="images/logo.png" alt="Grafitasi Logo" style="height: 60px;">
       </a>
@@ -105,9 +105,9 @@
           <li><a class="nav-link" href="prestasi.html">Prestasi</a></li>
         </ul>
       </div>
-    </div>
-  </nav>
-    <!-- End Header/Navigation
+      </div>
+    </nav>
+    <!-- End Header/Navigation-->
 
     <!-- Start Why Choose Us Section -->
     <div class="why-choose-section">
