--- a/ppdb.html
+++ b/ppdb.html
@@ -116,12 +116,79 @@
         <div class="col-lg-8 mx-auto text-center">
           <h1 class="mb-4">Penerimaan Peserta Didik Baru (PPDB)</h1>
           <p class="mb-4">Selamat datang di halaman PPDB SDN 06 Ngringo. Kami dengan senang hati mengundang Anda untuk bergabung dengan keluarga besar sekolah kami. Berikut adalah informasi lengkap mengenai prosedur dan persyaratan penerimaan siswa baru.</p>
-          <img src="images/PPDB.png" alt="Poster PPDB" class="img-fluid">
+          <img src="images/PPDB-poster1.JPG" alt="Poster PPDB" class="img-fluid">
           <p class="mt-4">Untuk informasi lebih lanjut, silakan hubungi kami melalui kontak yang tersedia di bagian bawah halaman ini atau kunjungi sekolah kami langsung di alamat yang tertera. Kami siap menyambut kedatangan Anda.</p>
         </div>
       </div>
     </div>
     <!-- End PPDB Section -->
+
+          <!-- Start Contact -->
+          <section class="contact-us mb-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 text-center mb-4">
+                  <h2 class="contact-title">Hubungi Kami</h2>
+                </div>
+              </div>
+              <div class="row text-center">
+                <div class="col-md-4 mb-3">
+                  <div class="card contact-card border-0 shadow">
+                    <div class="card-body">
+                      <div class="contact-icon mb-3">
+                        <i class="fas fa-envelope fa-3x"></i>
+                      </div>
+                      <a href="mailto:sdn06ngringo@gmail.com" target="_blank" class="no-decoration">
+                        <h5 class="card-title">sdn06ngringo@gmail.com</h5>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <div class="card contact-card border-0 shadow">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="contact-icon mb-3 text-center">
+                          <i class="fab fa-whatsapp fa-2x"></i>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                          <div class="card">
+                            <div class="card-body text-center">
+                              <a href="https://wa.me/6281393737693" target="_blank" class="no-decoration">
+                                <h4 class="card-title">Bu Imah</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                          <div class="card">
+                            <div class="card-body text-center">
+                              <a href="https://wa.me/6282137625123" target="_blank" class="no-decoration">
+                                <h4 class="card-title">Bu Finus</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <div class="card contact-card border-0 shadow">
+                    <div class="card-body">
+                      <div class="contact-icon mb-3">
+                        <i class="fab fa-instagram fa-3x"></i>
+                      </div>
+                      <a href="https://www.instagram.com/sdn06_ngringo/" target="_blank" class="no-decoration">
+                        <h5 class="card-title">@sdn06ngringo</h5>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- End contact -->
 
     <!-- Start Footer Section -->
     <footer class="footer-section">
