menambahkan gambar ekstra

--- a/ekstrakurikuler.html
+++ b/ekstrakurikuler.html
@@ -61,9 +61,9 @@
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
                 <li><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
                 <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
-                <li>
+                <!-- <li>
                   <a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a>
-                </li>
+                </li> -->
               </ul>
             </li>
             <li><a class="nav-link" href="ppdb.html">PPDB</a></li>
@@ -119,18 +119,18 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="images/beranda.JPG"
+                    src="images/ekstra/drumband.JPG"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="Drumband 1"
                   />
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                   <img
                     src="images/guru.png"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="Drumband 2"
                   />
-                </div>
+                </div> -->
               </div>
               <button
                 class="carousel-control-prev"
@@ -248,14 +248,14 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="images/beranda.JPG"
+                    src="images/ekstra/senitari1.jpg"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="Seni Tari 1"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="images/guru.png"
+                    src="images/ekstra/senitari2.jpg"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="Seni Tari 2"
                   />
@@ -377,18 +377,18 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="images/beranda.JPG"
+                    src="images/ekstra/bta.jpg"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="BTA 1"
                   />
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                   <img
                     src="images/guru.png"
                     class="d-block w-100 img-fluid height-fixed"
                     alt="BTA 2"
                   />
-                </div>
+                </div> -->
               </div>
               <button
                 class="carousel-control-prev"
@@ -486,7 +486,7 @@
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
                   <li><a href="pengembangan.html"> Pengembangan Karakter</a></li>
-                  <li><a href="organisasi.html">Struktur Organisasi</a></li>
+                  <!-- <li><a href="organisasi.html">Struktur Organisasi</a></li> -->
                   <li><a href="pengumuman.html">Pengumuman Sekolah</a></li>
                   <li><a href="materi.html">Materi Sekolah</a></li>
                 </ul>
