--- a/pengembangan.html
+++ b/pengembangan.html
@@ -88,7 +88,7 @@
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
               <li><a class="dropdown-item text-danger" href="visimisi.html">Visi - Misi</a></li>
               <li class="active"><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
-              <li><a class="dropdown-item" href="organisasi.html">Struktur Organisasi</a></li>
+              <!-- <li><a class="dropdown-item" href="organisasi.html">Struktur Organisasi</a></li> -->
             </ul>
           </li>
           <li><a class="nav-link" href="ppdb.html">PPDB</a></li>
@@ -255,7 +255,7 @@
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
                   <li><a href="pengembangan.html"> Pengembangan Karakter</a></li>
-                  <li><a href="organisasi.html">Struktur Organisasi</a></li>
+                  <!-- <li><a href="organisasi.html">Struktur Organisasi</a></li> -->
                   <li><a href="pengumuman.html">Pengumuman Sekolah</a></li>
                   <li><a href="materi.html">Materi Sekolah</a></li>
                 </ul>
