--- a/pengumuman.html
+++ b/pengumuman.html
@@ -60,9 +60,9 @@
                 Profil
               </a>
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li class="active"><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
+                <li><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
                 <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
-                <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li>
+                <!-- <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li> -->
               </ul>
             </li>
             
@@ -79,7 +79,7 @@
                 Informasi
               </a>
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
-                <li><a class="dropdown-item text-danger" href="pengumuman.html">Pengumuman Sekolah</a></li>
+                <li class="active"><a class="dropdown-item text-danger" href="pengumuman.html">Pengumuman Sekolah</a></li>
                 <li><a class="dropdown-item" href="materi.html">Materi Sekolah<a></li>
                
               </ul>
@@ -139,10 +139,10 @@
             <img src="images/side-gambar3.webp" class="card-img-top" alt="Side Image 1">
           </div>
           <div class="card mb-4 shadow-sm">
-            <img src="images/side-gambar.webp" class="card-img-top" alt="Side Image 2">
+            <img src="images/side-gambar.jpg" class="card-img-top" alt="Side Image 2">
           </div>
           <div class="card mb-4 shadow-sm">
-            <img src="images/side-gambar2.webp" class="card-img-top" alt="Side Image 2">
+            <img src="images/side-gambar2.jpg" class="card-img-top" alt="Side Image 2">
           </div>
           </div>
       </div>
@@ -174,7 +174,7 @@
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
                   <li><a href="pengembangan.html"> Pengembangan Karakter</a></li>
-                  <li><a href="organisasi.html">Struktur Organisasi</a></li>
+                  <!-- <li><a href="organisasi.html">Struktur Organisasi</a></li> -->
                   <li><a href="pengumuman.html">Pengumuman Sekolah</a></li>
                   <li><a href="materi.html">Materi Sekolah</a></li>
                 </ul>
