--- a/ppdb.html
+++ b/ppdb.html
@@ -64,7 +64,7 @@
               <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
                 <li class="active"><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
                 <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
-                <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li>
+                <!-- <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li> -->
               </ul>
             </li>
             
@@ -215,7 +215,7 @@
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
                   <li><a href="pengembangan.html"> Pengembangan Karakter</a></li>
-                  <li><a href="organisasi.html">Struktur Organisasi</a></li>
+                  <!-- <li><a href="organisasi.html">Struktur Organisasi</a></li> -->
                   <li><a href="pengumuman.html">Pengumuman Sekolah</a></li>
                   <li><a href="materi.html">Materi Sekolah</a></li>
                 </ul>
