--- a/prestasi.html
+++ b/prestasi.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu bg-dark" aria-labelledby="shopDropdown">
               <li class="active"><a class="dropdown-item" href="visimisi.html">Visi - Misi</a></li>
               <li><a class="dropdown-item" href="pengembangan.html">Pengembangan Karakter</a></li>
-              <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li>
+              <!-- <li><a class="dropdown-item" href="strukturOrganisasi.html">Struktur Organisasi</a></li> -->
             </ul>
           </li>
           
@@ -162,7 +162,7 @@
                         <div class="card-body d-flex align-items-center">
                             <div class="flex-grow-1">
                                 <div class="number h4 mb-0">Juara 1</div>
-                                <div class="title h5 mb-0">Tilawah putra MAPSI</div>
+                                <div class="title h5 mb-0">Tilawah putri MAPSI</div>
                             </div>
                             <div>
                                 <img src="images/medal/medal-gold.svg" alt="Medali emas" class="img-fluid" style="width: 50px;">
@@ -186,7 +186,7 @@
                               </div>
                           </div>
                           <div class="card-footer bg-transparent border-0 text-muted detail">
-                              Tingkat Kec, SD/MI Kecamatan Jaten
+                              SD/MI Kecamatan Jaten
                           </div>
                       </div>
                   </div>
@@ -203,7 +203,7 @@
                               </div>
                           </div>
                           <div class="card-footer bg-transparent border-0 text-muted detail">
-                              Tingkat Kec, SD/MI Kecamatan Jaten
+                              SD/MI Kecamatan Jaten
                           </div>
                       </div>
                   </div>
@@ -220,7 +220,7 @@
                               </div>
                           </div>
                           <div class="card-footer bg-transparent border-0 text-muted detail">
-                              Tingkat Kec, SD/MI Kecamatan Jaten
+                              SD/MI Kecamatan Jaten
                           </div>
                       </div>
                   </div>
@@ -254,7 +254,7 @@
                               </div>
                           </div>
                           <div class="card-footer bg-transparent border-0 text-muted detail">
-                              Tingkat Kec, SD/MI kecamatan Jaten
+                              SD/MI kecamatan Jaten
                           </div>
                       </div>
                   </div>
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <div class="card-footer bg-transparent border-0 text-muted detail">
-                    Tingkat Kab, SD/MI kabupaten Karanganyar
+                    SD/MI kabupaten Karanganyar
                 </div>
             </div>
         </div>
@@ -289,7 +289,7 @@
                       </div>
                   </div>
                   <div class="card-footer bg-transparent border-0 text-muted detail">
-                      Tingkat Kecamatan, SD/MI kecamatan Jaten
+                      SD/MI kecamatan Jaten
                   </div>
               </div>
           </div>
@@ -305,7 +305,7 @@
                     </div>
                 </div>
                 <div class="card-footer bg-transparent border-0 text-muted detail">
-                    Tingkat Kab
+                  SD/MI kabupaten Karanganyar
                 </div>
             </div>
         </div>
@@ -322,7 +322,7 @@
                                 </div>
                             </div>
                             <div class="card-footer bg-transparent border-0 text-muted detail">
-                                Tingkat Kec
+                              SD/MI kecamatan Jaten
                             </div>
                         </div>
                     </div>
@@ -366,14 +366,14 @@
                             <div class="card-body d-flex align-items-center">
                                 <div class="flex-grow-1">
                                     <div class="number h4 mb-0">Juara 2</div>
-                                    <div class="title h5 mb-0">CCA</div>
+                                    <div class="title h5 mb-0">Cerdas Cermat Alkitab</div>
                                 </div>
                                 <div>
                                     <img src="images/medal/medal-silver.svg" alt="Medali perak" class="img-fluid" style="width: 50px;">
                                 </div>
                             </div>
                             <div class="card-footer bg-transparent border-0 text-muted detail">
-                                Tingkat Kec
+                              SD/MI kecamatan Jaten
                             </div>
                         </div>
                     </div>
@@ -409,7 +409,7 @@
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
                   <li><a href="pengembangan.html"> Pengembangan Karakter</a></li>
-                  <li><a href="organisasi.html">Struktur Organisasi</a></li>
+                  <!-- <li><a href="organisasi.html">Struktur Organisasi</a></li> -->
                   <li><a href="pengumuman.html">Pengumuman Sekolah</a></li>
                   <li><a href="materi.html">Materi Sekolah</a></li>
                 </ul>
